# webscraper

./: .gitignore  pyproject.toml  results.json
.github/workflows/: ci.yml
scraper/: cli.py
scraper/core/: engine.py  proxy.py  rate_limiter.py
scraper/plugins/: base.py  example.py
tests/: test_rate_limiter.py
