[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraper"
version = "0.1.0"
description = "A distributed async web scraping framework with proxy rotation and plugin system"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "click>=8.0",
]

[project.scripts]
webscraper = "scraper.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]